--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -1,8 +1,26 @@
 <div class="container">
 	<div class="row">
-		<div class="col-xs-6">
+		<div class="col-xs-12">
 			<div>
-				<p class="dotted">Body works!</p>
+				<p>Dear all,
+				<p>This is Rohit Aggarwal. This website is hosted over Google
+					platform using bunch of cloud technologies. Reason of creating my
+					website of my own, is to use all bunch of latest technologies
+					learning and learnt in the past. </p><p>In case, need some help for free,
+					you can contact me any time @rohit.aggarwal@rohitaggarwal.net. In
+					my free time, will give you my response.
+				<p>
+					I am <b>google certified professional architect, AWS certified
+						Associate Architect and Developer</b>.
+				<p>List of used technologies.
+				<ul>
+					<li>Angular 8</li>
+					<li>Micro services Architecture (Business service and backend
+						service, Discovery service (Eureka), ApI gateway (Zulu), Tracing
+						Service (Debugging)</li>
+					<li>Deployment – Kubernetes along with Docker.</li>
+				</ul>
+				<p></p>
 			</div>
 		</div>
 	</div>
