--- a/src/app/components/head/head.component.html
+++ b/src/app/components/head/head.component.html
@@ -1,1 +1,7 @@
-head...
+<nav class="navbar navbar-default">	
+<div class="container-fluid">
+	<div class="navbar-header">
+	<a href="https://www.linkedin.com/in/rohitaggarwals/" class="navbar-brand">Rohit Aggarwal</a>
+	</div>
+</div> 
+</nav>
