--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -1,6 +1,7 @@
 <div class="container">
 	<div class="row">
-		<div class="col-xs-12">
+		<div class="col-xs-12"  ngStyle="{background: 
+		'https://www.conceptdraw.com/How-To-Guide/picture/Computer-Networks-Cloud-Computing-Diagrams-Cloud-Computing.png'}">
 			<div>
 				<p>Dear all,
 				<p>This is Rohit Aggarwal. This website is hosted over Google
