--- a/src/app/components/left/left.component.html
+++ b/src/app/components/left/left.component.html
@@ -2,10 +2,10 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<div>
-				<p class="dotted">left works!</p>
+				<p class="dotted"></p>
 			</div>
 		</div>
 	</div>
 </div>
-
+		<app-certifications></app-certifications>
 
