--- a/src/app/components/head/head.component.html
+++ b/src/app/components/head/head.component.html
@@ -1,23 +1,8 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default  navbar-default">
 	<div class="container-fluid">
 		<div class="navbar-header">
 			<a href="#" class="navbar-brand">Rohit Aggarwal</a>
 		</div>
-		<div class="collapse navbar-collapse">
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="https://www.linkedin.com/in/rohitaggarwals/">Linked In</a></li>
-				<li><a href="#">Certifications</a></li>
-			</ul>
-			<ul class="nav navbar-nav navbar-right">
-				<li class="dropdown">
-				<a  href="" class="dropown-toggle" role="button">Manage<span class="caret"></span></a>
-					<ul class="dropdown-menu">
-						<li><a href="https://www.linkedin.com/in/rohitaggarwals/">Linked In</a></li>
-						<li><a href="#">Certifications</a></li>
-					</ul>
-			</ul>
 
-
-		</div>
 	</div>
 </nav>
