--- a/src/app/components/head/head.component.html
+++ b/src/app/components/head/head.component.html
@@ -1,8 +1,24 @@
-<nav class="navbar navbar-default  navbar-default">
-	<div class="container-fluid">
-		<div class="navbar-header">
-			<a href="#" class="navbar-brand">Rohit Aggarwal</a>
-		</div>
+<nav class="navbar navbar-default" role="navigation">
+	<div class="navbar-header">
+		<button type="button" class="navbar-toggle" data-toggle="collapse"
+			data-target=".navbar-collapse">
+			<span class="icon-bar"></span> <span class="icon-bar"></span> <span
+				class="icon-bar"></span>
+		</button>
+	</div>
+	<div class="navbar-collapse collapse">
+		<ul class="nav navbar-nav">
+			<li><a href="/body" >Rohit Aggarwal</a></li>
+		</ul>
+		<ul class="nav navbar-nav navbar-right">
+			<li><a routerLink="/certifications" routerLinkActive="active">Certifications</a></li>
+			<li><a href="https://www.linkedin.com/in/rohitaggarwals/"
+				target="_blank">Linked In</a></li>
+			<li><a routerLink="/aboutme" routerLinkActive="in	active">About
+					me</a></li>
+					<li><a routerLink="/contactme" routerLinkActive="active">Contact Me</a></li>
+
+		</ul>
 
 	</div>
 </nav>
