--- a/src/app/components/left/left.component.html
+++ b/src/app/components/left/left.component.html
@@ -1,2 +1,21 @@
-
-
+<!-- <ul class="list-unstyled components">
+  <li>
+  <a [routerLink]="['/home']">
+  <i class="fas fa-home"></i>
+  Home
+  </a>
+  <a [routerLink]="['/str']">
+  <i class="fas fa-store"></i>
+  Store
+  </a>
+  <a [routerLink]="['/inv']">
+  <i class="fas fa-chart-bar"></i>
+  Inventory
+  </a>
+  <a [routerLink]="['/gen']">
+  <i class="fas fa-cogs"></i>
+  Generator
+  </a>
+  </li>
+</ul>
+ -->
