--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div>
+	<app-head></app-head>
+	<app-left></app-left>
 	<router-outlet></router-outlet>
+	
+	<app-right></app-right>
+	<app-footer></app-footer>
 </div>
